--- a/index.html
+++ b/index.html
@@ -21,10 +21,22 @@
             <form action="">
               <input
                 type="text"
+                name="email"
+                id="email"
                 placeholder="Adresse e-mail ou numéro de tel."
+                class="datas"
                 autofocus
               />
-              <input type="password" placeholder="Mot de passe" />
+              <span class="email-error"></span>
+              <input
+                type="password"
+                name="password"
+                id="password"
+                class="datas"
+                placeholder="Mot de passe"
+              />
+              <span class="password-error"></span>
+
               <input type="submit" value="Se connecter" />
             </form>
             <a href="#">mot de passe oublié ?</a>
@@ -38,5 +50,6 @@
         </div>
       </div>
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
